--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,7 @@
 language: java
-before_install:
-  - sudo apt-get install -y build-essential omniidl libomniorb4-dev libcos4-dev libomnithread3-dev libzmq3-dev  
-install: ant build
-env:
-  - ROOT=/home/travis/build/tango-controls/TangoSourceDistribution/build/distr
 
 script:
-  - ant package
-
-addons:
-  apt:
-    update: true
+  - ant build package
 
 deploy:
   - provider: releases
