--- a/assets/lib/java/atkpanel.in
+++ b/assets/lib/java/atkpanel.in
@@ -14,7 +14,7 @@ LIB_DIR=@prefix@/share/java;   export LIB_DIR
 
 TANGO=$LIB_DIR/JTango.jar
 TANGOATK=$LIB_DIR/ATKCore.jar:$LIB_DIR/ATKWidget.jar
-ATKPANEL=$LIB_DIR/atkpanel.jar
+ATKPANEL=$LIB_DIR/ATKPanel.jar
 
 CLASSPATH=$ATKPANEL:$TANGOATK:$TANGO
 export CLASSPATH
