Add TangoRestServer/rest to TangoDatabase

--- a/distribution.properties
+++ b/distribution.properties
@@ -20,7 +20,7 @@ rest-server-ver=1.2
 #tool_panels=
 #cppserver
 TangoTest=TangoTest-Release-2.1
-TangoDatabase=DataBase-Release-5.6
+TangoDatabase=Ingvord-add-rest-server
 TangoAccessControl=master
 starter=Starter-7.0
 #doc
