change rest-server.jar to RestServer.jar otherwise make install hook does not create proper symbolic link

--- a/build.xml
+++ b/build.xml
@@ -324,8 +324,8 @@
 
 
     <!-- rest-server -->
-    <property name="rest-server-jar" value="rest-server-${rest-server-ver}.jar"/>
-    <property name="rest-server-url" value="${rest-server-root-repo}/download/rest-server-${rest-server-ver}/${rest-server-jar}"/>
+    <property name="rest-server-jar" value="RestServer-${rest-server-ver}.jar"/>
+    <property name="rest-server-url" value="${rest-server-root-repo}/download/rest-server-${rest-server-ver}/rest-server-${rest-server-ver}.jar"/>
 
     <target name="-fetch-rest-server">
         <get src="${rest-server-url}" dest="${workdir}/${rest-server-jar}" skipexisting="true"/>
