Revert "Progress #14: replace -version-info with -release"
This reverts commit 92278ffab53b502018ad8d4eced0b491670c8e0d.

--- a/assets/lib/cpp/client/Makefile.am
+++ b/assets/lib/cpp/client/Makefile.am
@@ -20,7 +20,7 @@ libtango_la_LIBADD = ../server/libserver.la	\
 
 # We need to set the -version-info for libtool so that libtool will
 # generate the correct .so version
-libtango_la_LDFLAGS=-release $(VERSION)
+libtango_la_LDFLAGS=-version-info $(VERSION_INFO)
 
 AM_CXXFLAGS=-D_TANGO_LIB
 
