--- a/distribution.properties
+++ b/distribution.properties
@@ -2,6 +2,8 @@ src-root-repo=https://github.com/tango-controls
 jtango-root-repo=https://bintray.com/tango-controls/generic/download_file?file_path
 java-root-repo=https://bintray.com/tango-controls/maven/download_file?file_path
 docs-root-repo=https://readthedocs.org/projects/tango-controls/downloads/pdf
+#version-info
+version-info=9:3:2
 #lib
 cppTango=9.3.2
 JTango=JTango-9.5.11
